# ftpProject2

./: .gitignore  CMakeLists.txt  makefile  myFtp.cpp  myFtpServer  myFtpServer.cpp  myFtpServerThreaded.cpp  myftp  submission.7z
submission/: README.txt  myFtpServerThreaded.cpp
